JBVFS-38, fixes for jar entries iteration corrupted on linux + fixed file locking issues